components/nonmem/src/parsing/snapshots/nonmem__parsing__model__tests__can_do_theta_perturbation_extended.snap
---
source: components/nonmem/src/parsing/parser.rs
expression: params
---
[
    "$PROBLEM Test extended theta syntax perturbation\n$INPUT ID TIME DV\n$DATA /home/vincent/dataset.csv\n$THETA (0, 0.5136465)x3           ; Three identical thetas\n$THETA CL=(0, 1.472, 10)      ; Named theta\n$THETA NAMES(KA, V) (0, 0.272) (0, 49.15)  ; NAMES syntax\n",
    "$PROBLEM Test extended theta syntax perturbation\n$INPUT ID TIME DV\n$DATA /home/vincent/dataset.csv\n$THETA (0, 0.4631279)x3           ; Three identical thetas\n$THETA CL=(0, 1.351, 10)      ; Named theta\n$THETA NAMES(KA, V) (0, 0.326) (0, 50.06)  ; NAMES syntax\n",
    "$PROBLEM Test extended theta syntax perturbation\n$INPUT ID TIME DV\n$DATA /home/vincent/dataset.csv\n$THETA (0, 0.5023039)x3           ; Three identical thetas\n$THETA CL=(0, 1.416, 10)      ; Named theta\n$THETA NAMES(KA, V) (0, 0.271) (0, 50.19)  ; NAMES syntax\n",
]
