components/nonmem/src/parsing/snapshots/nonmem__parsing__model__tests__can_handle_errors@invalid_num_filter.mod.snap
---
source: components/nonmem/src/parsing/model.rs
expression: err
input_file: components/nonmem/test_data/parser_errors/invalid_num_filter.mod
---
  --> [3:60]
  |
3 | $DATA ..\data.csv IGNORE=# IGNORE=(DVID.EQ.3) IGNORE=(ID.EQ.A)
  |                                                             ^---
  = Invalid value in data filter: A is not a number
