components/nonmem/src/parsing/snapshots/nonmem__parsing__model__tests__can_handle_errors@invalid_op.mod.snap
---
source: components/nonmem/src/parsing/model.rs
expression: err
input_file: components/nonmem/test_data/parser_errors/invalid_op.mod
---
  --> [3:57]
  |
3 | $DATA ..\data.csv IGNORE=# IGNORE=(DVID.EQ.3) IGNORE=(ID.EQQ.3.14)
  |                                                          ^---
  = Invalid control comparison operator: only EQ, NE, GT, GE, LT or LE are allowed
