components/nonmem/src/parsing/snapshots/nonmem__parsing__model__tests__can_handle_errors@unclosed_quote.mod.snap
---
source: components/nonmem/src/parsing/model.rs
assertion_line: 963
expression: err
input_file: components/nonmem/test_data/parser_errors/unclosed_quote.mod
---
  --> [3:6]
  |
3 | $DATA "..\data.csv
  |       ^---
  = Unclosed double quote
