components/nonmem/src/parsing/snapshots/nonmem__parsing__model__tests__can_parse_comments_type1.snap
---
source: components/nonmem/src/parsing/model.rs
expression: model
---
Model {
    problem: "RUN# Example 1 (from samp5l)",
    input_columns: [
        Included(
            "C",
        ),
        Included(
            "SET",
        ),
        Included(
            "ID",
        ),
        Included(
            "JID",
        ),
        Included(
            "TIME",
        ),
        Aliased {
            from: "CONC",
            to: "DV",
        },
        Aliased {
            from: "DOSE",
            to: "AMT",
        },
        Included(
            "RATE",
        ),
        Included(
            "EVID",
        ),
        Included(
            "MDV",
        ),
        Included(
            "CMT",
        ),
        Included(
            "CLX",
        ),
        Included(
            "V1X",
        ),
        Included(
            "QX",
        ),
        Included(
            "V2X",
        ),
        Included(
            "SDIX",
        ),
        Included(
            "SDSX",
        ),
    ],
    data: Data {
        path: "example1.csv",
        ignore: [
            Marker(
                "C",
            ),
        ],
        accept: [],
        num_records: None,
    },
    subroutines: [],
    theta_parameters: [
        Parameter {
            lower_bound: Some(
                0.0,
            ),
            initial_value: 27.5,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "TVCL (L/h)",
            ),
            parsed_comment: Some(
                Type1(
                    WithUnit {
                        parameter: "TVCL",
                        unit: "L/h",
                        parametrization: None,
                    },
                ),
            ),
        },
        Parameter {
            lower_bound: Some(
                0.0,
            ),
            initial_value: 1.365,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "TVV (L)",
            ),
            parsed_comment: Some(
                Type1(
                    WithUnit {
                        parameter: "TVV",
                        unit: "L",
                        parametrization: None,
                    },
                ),
            ),
        },
        Parameter {
            lower_bound: Some(
                0.0,
            ),
            initial_value: 1.1,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "TVKA (1/h)",
            ),
            parsed_comment: Some(
                Type1(
                    WithUnit {
                        parameter: "TVKA",
                        unit: "1/h",
                        parametrization: None,
                    },
                ),
            ),
        },
        Parameter {
            lower_bound: Some(
                0.0,
            ),
            initial_value: 0.254,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "TLAG (h)",
            ),
            parsed_comment: Some(
                Type1(
                    WithUnit {
                        parameter: "TLAG",
                        unit: "h",
                        parametrization: None,
                    },
                ),
            ),
        },
        Parameter {
            lower_bound: Some(
                0.0,
            ),
            initial_value: 0.23,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "RES ERR :stdev",
            ),
            parsed_comment: Some(
                Type1(
                    Type {
                        typ: "RES ERR",
                        parameterization: "stdev",
                    },
                ),
            ),
        },
        Parameter {
            lower_bound: Some(
                0.0,
            ),
            initial_value: 0.006,
            upper_bound: Some(
                0.02941,
            ),
            is_fixed: false,
            comment: Some(
                "CRCL cov",
            ),
            parsed_comment: Some(
                Type1(
                    Covariate {
                        parameter: "CRCL",
                    },
                ),
            ),
        },
    ],
    omega_blocks: [
        ParameterBlock {
            structure: Diagonal,
            parametrization: None,
            parameters: [
                Parameter {
                    lower_bound: None,
                    initial_value: 0.135,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "OM1 TVCL :OMIT_TBL",
                    ),
                    parsed_comment: Some(
                        Type1(
                            Type1Omega {
                                name: "OM1",
                                theta_name: "TVCL",
                                parameterization: "OMIT_TBL",
                            },
                        ),
                    ),
                },
                Parameter {
                    lower_bound: None,
                    initial_value: 0.1,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "OM2 TVV :EXP",
                    ),
                    parsed_comment: Some(
                        Type1(
                            Type1Omega {
                                name: "OM2",
                                theta_name: "TVV",
                                parameterization: "EXP",
                            },
                        ),
                    ),
                },
                Parameter {
                    lower_bound: None,
                    initial_value: 0.734,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "OM3 TVKA :OMIT_TBL",
                    ),
                    parsed_comment: Some(
                        Type1(
                            Type1Omega {
                                name: "OM3",
                                theta_name: "TVKA",
                                parameterization: "OMIT_TBL",
                            },
                        ),
                    ),
                },
            ],
        },
    ],
    sigma_blocks: [
        ParameterBlock {
            structure: Diagonal,
            parametrization: None,
            parameters: [
                Parameter {
                    lower_bound: None,
                    initial_value: 1.0,
                    upper_bound: None,
                    is_fixed: true,
                    comment: Some(
                        "SIG1 :OMIT_TBL",
                    ),
                    parsed_comment: Some(
                        Type1(
                            Type1Sigma {
                                name: "SIG1",
                                parameterization: Some(
                                    "OMIT_TBL",
                                ),
                            },
                        ),
                    ),
                },
            ],
        },
    ],
    estimations: [],
    tables: [],
    is_simulation_only: false,
}
