components/nonmem/src/parsing/snapshots/nonmem__parsing__model__tests__can_parse_comments_type2.snap
---
source: components/nonmem/src/parsing/model.rs
expression: model
input_file: components/nonmem/test_data/comments/type2/type2.mod
---
Model {
    problem: "RUN# Type2 Comment Test",
    input_columns: [
        Included(
            "C",
        ),
        Included(
            "SET",
        ),
        Included(
            "ID",
        ),
        Included(
            "JID",
        ),
        Included(
            "TIME",
        ),
        Aliased {
            from: "CONC",
            to: "DV",
        },
        Aliased {
            from: "DOSE",
            to: "AMT",
        },
        Included(
            "RATE",
        ),
        Included(
            "EVID",
        ),
        Included(
            "MDV",
        ),
        Included(
            "CMT",
        ),
    ],
    data: Data {
        path: "example1.csv",
        ignore: [
            Marker(
                "C",
            ),
        ],
        accept: [],
        num_records: None,
        null_value: None,
    },
    subroutines: [],
    theta_parameters: [
        Parameter {
            name: None,
            lower_bound: Some(
                0.0,
            ),
            initial_value: 18.62,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "1  CL/F [L/h]",
            ),
            parsed_comment: Some(
                Type2(
                    Type2ThetaSigma {
                        prefix: Some(
                            "1",
                        ),
                        name: "CL/F",
                        unit: Some(
                            "L/h",
                        ),
                        parameterization: None,
                    },
                ),
            ),
        },
        Parameter {
            name: None,
            lower_bound: Some(
                0.0,
            ),
            initial_value: 232.5,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "2  VC/F [L]",
            ),
            parsed_comment: Some(
                Type2(
                    Type2ThetaSigma {
                        prefix: Some(
                            "2",
                        ),
                        name: "VC/F",
                        unit: Some(
                            "L",
                        ),
                        parameterization: None,
                    },
                ),
            ),
        },
        Parameter {
            name: None,
            lower_bound: Some(
                0.0,
            ),
            initial_value: 2.82,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "3  KA (1/h) ;exp",
            ),
            parsed_comment: Some(
                Type2(
                    Type2ThetaSigma {
                        prefix: Some(
                            "3",
                        ),
                        name: "KA",
                        unit: Some(
                            "1/h",
                        ),
                        parameterization: Some(
                            LogNormal,
                        ),
                    },
                ),
            ),
        },
        Parameter {
            name: None,
            lower_bound: None,
            initial_value: 1.0,
            upper_bound: None,
            is_fixed: true,
            comment: Some(
                "4  F1",
            ),
            parsed_comment: Some(
                Type2(
                    Type2ThetaSigma {
                        prefix: Some(
                            "4",
                        ),
                        name: "F1",
                        unit: None,
                        parameterization: None,
                    },
                ),
            ),
        },
        Parameter {
            name: None,
            lower_bound: Some(
                0.0,
            ),
            initial_value: 25.0,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "THETA5 Q [L/h] :LOG",
            ),
            parsed_comment: Some(
                Type2(
                    Type2ThetaSigma {
                        prefix: Some(
                            "THETA5",
                        ),
                        name: "Q",
                        unit: Some(
                            "L/h",
                        ),
                        parameterization: Some(
                            LogNormal,
                        ),
                    },
                ),
            ),
        },
        Parameter {
            name: None,
            lower_bound: Some(
                0.0,
            ),
            initial_value: 25.0,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "6  VP/F [L]",
            ),
            parsed_comment: Some(
                Type2(
                    Type2ThetaSigma {
                        prefix: Some(
                            "6",
                        ),
                        name: "VP/F",
                        unit: Some(
                            "L",
                        ),
                        parameterization: None,
                    },
                ),
            ),
        },
        Parameter {
            name: None,
            lower_bound: Some(
                0.0,
            ),
            initial_value: 0.23,
            upper_bound: None,
            is_fixed: false,
            comment: Some(
                "RUV :add",
            ),
            parsed_comment: Some(
                Type2(
                    Type2ThetaSigma {
                        prefix: None,
                        name: "RUV",
                        unit: None,
                        parameterization: Some(
                            AddErr,
                        ),
                    },
                ),
            ),
        },
    ],
    omega_blocks: [
        ParameterBlock {
            structure: Block {
                size: 3,
            },
            parametrization: None,
            parameters: [
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.1,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "11 IIV CL/F ;exp",
                    ),
                    parsed_comment: Some(
                        Type2(
                            Type2Omega {
                                prefix: Some(
                                    "11",
                                ),
                                name: "IIV",
                                associated_theta: Some(
                                    [
                                        "CL/F",
                                    ],
                                ),
                                parameterization: Some(
                                    LogNormal,
                                ),
                            },
                        ),
                    ),
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.01,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "22 IIV VC/F ;log",
                    ),
                    parsed_comment: None,
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.1,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "22 IIV VC/F ;log",
                    ),
                    parsed_comment: Some(
                        Type2(
                            Type2Omega {
                                prefix: Some(
                                    "22",
                                ),
                                name: "IIV",
                                associated_theta: Some(
                                    [
                                        "VC/F",
                                    ],
                                ),
                                parameterization: Some(
                                    LogNormal,
                                ),
                            },
                        ),
                    ),
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.01,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "OMEGA(3,1) Corr CL/F-KA",
                    ),
                    parsed_comment: Some(
                        Type2(
                            Type2Omega {
                                prefix: Some(
                                    "OMEGA(3,1)",
                                ),
                                name: "Corr",
                                associated_theta: Some(
                                    [
                                        "CL/F",
                                        "KA",
                                    ],
                                ),
                                parameterization: None,
                            },
                        ),
                    ),
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.01,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "33 IIV KA :LOG",
                    ),
                    parsed_comment: None,
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.1,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "33 IIV KA :LOG",
                    ),
                    parsed_comment: Some(
                        Type2(
                            Type2Omega {
                                prefix: Some(
                                    "33",
                                ),
                                name: "IIV",
                                associated_theta: Some(
                                    [
                                        "KA",
                                    ],
                                ),
                                parameterization: Some(
                                    LogNormal,
                                ),
                            },
                        ),
                    ),
                },
            ],
        },
        ParameterBlock {
            structure: Diagonal,
            parametrization: None,
            parameters: [
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.1,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "IIV F1 ;exp",
                    ),
                    parsed_comment: Some(
                        Type2(
                            Type2Omega {
                                prefix: None,
                                name: "IIV",
                                associated_theta: Some(
                                    [
                                        "F1",
                                    ],
                                ),
                                parameterization: Some(
                                    LogNormal,
                                ),
                            },
                        ),
                    ),
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.1,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "IIV Q ;log",
                    ),
                    parsed_comment: Some(
                        Type2(
                            Type2Omega {
                                prefix: None,
                                name: "IIV",
                                associated_theta: Some(
                                    [
                                        "Q",
                                    ],
                                ),
                                parameterization: Some(
                                    LogNormal,
                                ),
                            },
                        ),
                    ),
                },
            ],
        },
    ],
    sigma_blocks: [
        ParameterBlock {
            structure: Diagonal,
            parametrization: None,
            parameters: [
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 0.1,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "11 PropErr ;Proportional",
                    ),
                    parsed_comment: Some(
                        Type2(
                            Type2ThetaSigma {
                                prefix: Some(
                                    "11",
                                ),
                                name: "PropErr",
                                unit: None,
                                parameterization: Some(
                                    Proportional,
                                ),
                            },
                        ),
                    ),
                },
                Parameter {
                    name: None,
                    lower_bound: None,
                    initial_value: 2.0,
                    upper_bound: None,
                    is_fixed: false,
                    comment: Some(
                        "22 AddErr [ng/mL] ;AddErr",
                    ),
                    parsed_comment: Some(
                        Type2(
                            Type2ThetaSigma {
                                prefix: Some(
                                    "22",
                                ),
                                name: "AddErr",
                                unit: Some(
                                    "ng/mL",
                                ),
                                parameterization: Some(
                                    AddErr,
                                ),
                            },
                        ),
                    ),
                },
            ],
        },
    ],
    estimations: [],
    tables: [],
    simulation: None,
    covariance: None,
}
